# codefuse

./: README.md  reset-database.bat  set-env.bat  start-all.bat  stop-all.bat
backend/: .env  pyproject.toml  reset_database.py  set_env.bat  start.bat  stop.bat
backend/app/: __init__.py  auth.py  config.py  database.py  judge_engine.py  judge_runner.py  judge_worker.py  main.py  models.py  schemas.py
backend/app/routers/: activity_logs.py  contests.py  friendships.py  messages.py  problems.py  submissions.py  test_cases_json.py  users.py
frontend/: index.html  package-lock.json  package.json  start.bat  stop.bat
frontend/src/: App.vue  api.js  main.js
frontend/src/components/: CodeViewer.vue  MarkdownEditor.vue
frontend/src/router/: index.js
frontend/src/styles/: global.css
frontend/src/utils/: avatar.js  markdown.js
frontend/src/views/: Admin.vue  ContestDetail.vue  Contests.vue  Friends.vue  Home.vue  Messages.vue  ProblemDetail.vue  Problems.vue  Profile.vue  Submissions.vue  TestCaseManager.vue  UserDetail.vue
设计报告/: 任务完成情况总结.docx  数据库操作实现文档.md  系统设计报告-final.docx  设计文档.md
设计报告/图表/: 基本.drawio  实体.drawio  联系.drawio
